[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.7.9", features = ["macros", "ws"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls"] }
clap = { version = "4.5.21", features = ["derive"] }
