[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
shared = { path = "../shared" }
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
clap = { version = "4.5.21", features = ["derive"] }
